Fixed Youtube Channel overflow issue on About page.
Changed link to wrap Youtube Channel text and also changed link styling in typography.css as the styles were not being picked up by the link.

--- a/src/css/typography.css
+++ b/src/css/typography.css
@@ -38,7 +38,9 @@
     @apply mt-6;
   }
 
-  a {
+  a,
+  p > a,
+  ul > li > a {
     @apply text-href-base underline;
   }
 
